# nifty

./: .gitignore  README.md  mix.exs  scheduler.exs
lib/: nifty.ex
lib/nifty/: application.ex  rust_nifs.ex  zig_nifs.ex
lib/nifty/faas/: db.ex  handler.ex  handler_supervisor.ex  router.ex
native/nifty_nifs/: Cargo.toml  README.md
native/nifty_nifs/src/: lib.rs
priv/static/: index.html
test/: wasm_out.wasm  wasm_test.exs
test/wasm_out/: Cargo.toml
test/wasm_out/.cargo/: config.toml
test/wasm_out/src/: lib.rs
