[package]
name = "wasm_out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]


[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
